<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">
    
    <LinearLayout
        android:id="@+id/IIContent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="6"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1.5"
            android:padding="10dp"
            android:src="@drawable/i_love_you" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5">

            <TextView
                android:id="@+id/txtBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_s_i_love_you"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/txtBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBookName"
                android:padding="8dp"
                android:text="@string/cecelia_ahern"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBookAuthor"
                android:padding="8dp"
                android:text="@string/rs_900"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txtBookRating"
            android:drawableLeft="@drawable/ic_rating"
            android:drawablePadding="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:padding="4dp"
            android:textSize="15sp"
            android:text="@string/_4_5"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>