<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff"
    app:cardCornerRadius="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/IIFavContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="11"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFavBookImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:src="@drawable/default_book"
            android:scaleType="fitCenter"
            android:background="#f5f5f5"/>

        <TextView
            android:id="@+id/txtFavBookName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/helloWorld"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="4dp"
            android:layout_weight="1.5"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_margin="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/android_IC"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_margin="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>

        <TextView
            android:id="@+id/txtFavBookPrice"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="4dp"
            android:text="@string/rs_599"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>


        <TextView
            android:id="@+id/txtFavBookRating"
            android:drawableLeft="@drawable/ic_rating"
            android:drawablePadding="4dp"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_width="wrap_content"
            android:padding="4dp"
            android:textSize="13sp"
            android:text="@string/_4_5"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:textAlignment="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f5f5f5"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>